# gstreamer

./: .gitignore  Cargo.toml  README.md  cctv-assistant.py  measurements.sh  meson.build  rs_face_selector.dot
cctv-assistant/: Cargo.toml
cctv-assistant/src/: main.rs
cctv-assistant/src/pipelines/: opencv_face_detect.rs  rs_face_selector.rs
measurements/: proc_opencv_2.txt  proc_opencv_3.txt  proc_opencv_4.txt  proc_opencv_5.txt  proc_opencv_6.txt  proc_opencv_7.txt  proc_opencv_8.txt  proc_rs_2.txt  proc_rs_3.txt  proc_rs_4.txt  proc_rs_5.txt  proc_rs_6.txt  proc_rs_7.txt  proc_rs_8.txt  times_opencv_2.txt  times_opencv_3.txt  times_opencv_4.txt  times_opencv_5.txt  times_opencv_6.txt  times_opencv_7.txt  times_opencv_8.txt  times_rs_2.txt  times_rs_3.txt  times_rs_4.txt  times_rs_5.txt  times_rs_6.txt  times_rs_7.txt  times_rs_8.txt
plugins/: Cargo.toml  build.rs
plugins/src/: face_counter.rs  face_selector.rs  lib.rs
src/: main.vala  meson.build
src/vapi/: threatdetect.vapi
subprojects/libthreatdetect/: meson.build  threatdetect.cpp
subprojects/libthreatdetect/include/: threatdetect.hpp
