[package]
name = "cctv-assistant"
version = "0.1.0"
authors = ["Bartosz Błaszków <bartosz06@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = "0.6"
gstreamer = "0.12"
gstreamer-audio = "0.12"
gstreamer-video = "0.12"
gstreamer-app = "0.12"

opencv = "0.29"