[package]
name = "cctv-assistant"
version = "0.1.0"
authors = ["Bartosz Błaszków <bartosz06@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = "0.9"
gstreamer = "0.15"
gstreamer-audio = "0.15"
gstreamer-video = "0.15"
gstreamer-app = "0.15"
