[package]
name = "gst-opencv-face-counter"
version = "0.1.0"
authors = ["Bartosz Błaszków <bbartosz06@gmail.com>"]
description = "Plugin for detecting faces using OpenCV"
edition = "2018"
repository = "https://github.com/multimedia-frameworks-mgr/gstreamer.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
glib = "0.9"
glib-sys = "0.9"
gobject-sys = "0.9"
gstreamer = { version = "0.15", features = ["v1_14", "v1_16"] }
gstreamer-sys = "0.8"
gstreamer-base = "0.15"
gstreamer-video = "0.15"

[lib]
name = "gstfacecounter"
crate-type = ["cdylib"]
path = "src/lib.rs"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
